# KNRGraphics

./: .gitignore  LICENSE  README.md  generate.bat
assets/shaders/: DeferredCompositionPixel.hlsl  DeferredForwardPixel.hlsl  DeferredForwardVertPrimitive.hlsl  FowardDrawPS.hlsl  FowardDrawVS.hlsl  texture_shader_vert.hlsl
code/engine/Core/: graphics_application.cpp  graphics_application.h  main.cpp
code/engine/Graphics/: buffer.cpp  buffer.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.hpp  command_buffer.cpp  command_buffer.h  framebuffer.cpp  framebuffer.h  graphics_context.h  graphics_events.hpp  graphics_profiler.cpp  graphics_profiler.h  knrpch.h  material.cpp  material.h  mesh.cpp  mesh.h  pipeline.h  render_commands.cpp  render_commands.h  render_layer.cpp  render_layer.h  render_types.h  renderable_types.h  renderer_2d.cpp  renderer_2d.h  renderer_api.cpp  renderer_api.h  screen_quad.cpp  screen_quad.h  shader.cpp  shader.h  shader_cache.cpp  shader_cache.h  shader_util.cpp  shader_util.h  swapchain.cpp  swapchain.h  (+8 more)
code/engine/Graphics/animation/: animation.h  animation_system.cpp  animation_system.h
code/engine/Graphics/logger/: logger.cpp  logger.h
code/engine/Graphics/platform/directx/: directx_buffer.cpp  directx_buffer.h  directx_command_buffer.cpp  directx_command_buffer.h  directx_copy_context.cpp  directx_copy_context.h  directx_fence.cpp  directx_fence.h  directx_frame_heap.cpp  directx_frame_heap.h  directx_framebuffer.cpp  directx_framebuffer.h  directx_graphics_context.cpp  directx_graphics_context.h  directx_graphics_profiler.cpp  directx_graphics_profiler.h  directx_heap.cpp  directx_heap.h  directx_indirect_signature.cpp  directx_indirect_signature.h  directx_pipeline.cpp  directx_pipeline.h  directx_pipeline_layout.cpp  directx_pipeline_layout.h  directx_render_system.cpp  directx_render_system.h  directx_renderer_api.cpp  directx_renderer_api.h  directx_shader.cpp  directx_shader.h  directx_swapchain.cpp  directx_swapchain.h  directx_system_manager.cpp  directx_system_manager.h  directx_technique.cpp  directx_technique.h  directx_texture.cpp  directx_texture.h
code/engine/Graphics/platform/directx11/: directx11_command_buffer.h  directx11_fence.h  directx11_framebuffer.cpp  directx11_framebuffer.h  (+11 more)
code/engine/Graphics/primitives/: cube.cpp  cube.h  plane.cpp  plane.h  sphere.cpp  sphere.h
code/engine/Graphics/shaders/: DeferredForwardVert.hlsl  LightUtil.hlsli  texture_shader_frag.hlsl
code/engine/Graphics/systems/: bloom_system.cpp  bloom_system.h  deferred_lighting_system.cpp  deferred_lighting_system.h  depth_prepass_system.cpp  depth_prepass_system.h  dlss_system.cpp  dlss_system.h  dof_system.cpp  dof_system.h  ffx_fsr2_system.cpp  ffx_fsr2_system.h  forward_plus_accumulation_system.cpp  forward_plus_accumulation_system.h  forward_system.cpp  forward_system.h  frustum_cull_compute_system.cpp  frustum_cull_compute_system.h  fxaa_system.cpp  fxaa_system.h  light_culling_compute_system.cpp  light_culling_compute_system.h  render_system.cpp  render_system.h  shadow_system.cpp  shadow_system.h  ssao_system.cpp  ssao_system.h  system_manager.cpp  system_manager.h  taa_system.cpp  taa_system.h
code/engine/KNRGraphics/: CMakeLists.txt  buffer.h  command_buffer.h  graphics_context.h  graphics_profiler.h  knrpch.cpp  pipeline.h  render_commands.cpp  render_commands.h  render_types.h  renderer_api.cpp  renderer_api.h  shader.h  swapchain.h  texture.h  vertex_declaration.h  window.h
code/engine/KNRGraphics/delegate/: callback.h
code/engine/KNRGraphics/logger/: logger.h
code/engine/KNRGraphics/platform/directx11/: directx11_buffer.cpp  directx11_buffer.h  directx11_command_buffer.cpp  directx11_fence.cpp  directx11_graphics_context.cpp  directx11_pipeline.cpp  directx11_renderer_api.cpp  directx11_shader.cpp  directx11_texture.cpp  directx11_util.cpp
code/engine/KNRGraphics/platform/directx12/: directx12_buffer.cpp  directx12_buffer.h  directx12_command_buffer.cpp  directx12_command_buffer.h  directx12_fence.cpp  directx12_frame_heap.cpp  directx12_frame_heap.h  directx12_graphics_context.cpp  directx12_graphics_context.h  directx12_graphics_profiler.cpp  directx12_graphics_profiler.h  directx12_heap.cpp  directx12_heap.h  directx12_indirect_signature.cpp  directx12_pipeline.cpp  directx12_pipeline.h  directx12_pipeline_layout.cpp  directx12_renderer_api.cpp  directx12_renderer_api.h  directx12_shader.cpp  directx12_shader.h  directx12_swapchain.cpp  directx12_swapchain.h  directx12_texture.cpp  directx12_texture.h  directx12_util.cpp  directx12_util.h  directx12_vertex_declaration.cpp  directx12_vertex_declaration.h
code/engine/KNRGraphics/platform/opengl/: opengl_command_buffer.cpp  opengl_fence.cpp  opengl_graphics_context.cpp  opengl_graphics_context.h  opengl_graphics_profiler.cpp  opengl_swapchain.cpp  opengl_swapchain.h  opengl_util.h
code/engine/KNRGraphics/platform/vulkan/: vulkan_buffer.h  vulkan_fence.cpp  vulkan_graphics_context.h  vulkan_graphics_profiler.cpp  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderer_api.cpp  vulkan_texture.cpp  vulkan_texture.h  vulkan_util.cpp  vulkan_util.h
code/engine/KNRGraphics/systems/: render_system.cpp  render_system.h  system_manager.h
code/engine/KNRGraphics/utility/: file_system.h
code/engine/KNRShaderCompiler/: ASTParser.y  ASTTypes.cpp  ASTTypes.h  CompilerDriver.cpp  CompilerDriver.h  Main.cpp  ShaderCompiler.h  ShaderCompiler.y  ShaderCompilerLex.cpp  ShaderCompilerLex.l  ShaderCompilerParser.y  ShaderFlexTokens.h  runlex.bat
code/engine/KNRShaderCompiler/DX11/: ShaderCompiler_dx11.cpp.cpp
code/engine/KNRShaderCompiler/DX12/: ShaderCompiler_dx12.cpp.cpp
code/engine/KNRShaderCompiler/OpenGL/: ShaderCompiler_opengl.cpp.cpp
code/engine/KNRShaderCompiler/Vulkan/: ShaderCompiler_vulkan.cpp.cpp
code/engine/KNRShaders/: KNR_RootSignature.h  KNR_ShaderInterop.h  TestShader1.hlsl  shaders.cpp.cpp
code/sharpmake/: Globals.cs  KNRBaseProject.make.cs  KNRGraphics.make.cs  KNRShaderCompiler.make.cs  KNRShaders.make.cs  Qualia.make.cs  Sandbox.make.cs
(+107 files in other folders)
